@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-06T08:12:15Z",
-  "count_outdated" : 1017,
-  "uniques_outdated" : 645,
+  "timestamp" : "2023-10-07T00:40:51Z",
+  "count_outdated" : 1019,
+  "uniques_outdated" : 646,
   "count" : 1054,
   "uniques" : 669,
   "clones" : [
-    {
-      "timestamp": "2023-09-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-09-23T00:00:00Z",
       "count": 2,
