@@ -1,3 +1,12 @@
+2023-10-07T00:40:51Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6437850390 # 1227
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-07
+* notice: last 14d: unq all: 4 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 645 1017 / 669 1054
+* notice: next accum: outdated-unq outdated-all / unq all: 646 1019 / 669 1054
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-09-22] / []
+
 2023-10-06T08:12:15Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6429148138 # 1225
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-06
